feat: 单体脚本支持jdk17 #3645